RESOLVED FIXED42691
WebKitTestRunner needs layoutTestController.setStopProvisionalFrameLoads
https://bugs.webkit.org/show_bug.cgi?id=42691
Summary WebKitTestRunner needs layoutTestController.setStopProvisionalFrameLoads
Sam Weinig
Reported 2010-07-20 15:15:21 PDT
WebKitTestRunner needs layoutTestController.setStopProvisionalFrameLoads
Attachments
WIP patch (6.07 KB, patch)
2011-03-22 17:38 PDT, Alexey Proskuryakov
no flags
Patch (9.50 KB, patch)
2012-09-14 07:29 PDT, Chris Dumez
no flags
Sam Weinig
Comment 1 2010-07-20 15:31:41 PDT
Alexey Proskuryakov
Comment 2 2011-03-22 17:38:38 PDT
Created attachment 86552 [details] WIP patch This implements the LayoutTestController method, but WebKit2 fails with an assertion because WebFrameProxy doesn't believe in injected bundles. void WebFrameProxy::didFailProvisionalLoad() { ASSERT(m_loadState == LoadStateProvisional); m_loadState = LoadStateFinished; m_provisionalURL = String(); }
Chris Dumez
Comment 3 2012-09-14 07:29:02 PDT
WebKit Review Bot
Comment 4 2012-09-14 08:18:17 PDT
Comment on attachment 164147 [details] Patch Clearing flags on attachment: 164147 Committed r128612: <http://trac.webkit.org/changeset/128612>
WebKit Review Bot
Comment 5 2012-09-14 08:18:20 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.