WebKitTestRunner needs layoutTestController.setStopProvisionalFrameLoads https://bugs.webkit.org/show_bug.cgi?id=42691

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-09-14
Reviewed by Kenneth Rohde Christiansen.

Source/WebKit2:

Add WKBundleFrame private API to stop loading of a frame.
This is needed by WebKitTestRunner to implement
testrunner.setStopProvisionalFrameLoads.

Original patch by Alexey Proskuryakov.

* WebProcess/InjectedBundle/API/c/WKBundleFrame.cpp:
(WKBundleFrameStopLoading):
* WebProcess/InjectedBundle/API/c/WKBundleFramePrivate.h:
* WebProcess/WebPage/WebFrame.cpp:
(WebKit::WebFrame::stopLoading):
(WebKit):
* WebProcess/WebPage/WebFrame.h:
(WebFrame):

Tools:

Add implementation for testrunner.setStopProvisionalFrameLoads()
in WebKitTestRunner.

Original patch by Alexey Proskuryakov.

* WebKitTestRunner/InjectedBundle/Bindings/TestRunner.idl:
* WebKitTestRunner/InjectedBundle/InjectedBundlePage.cpp:
(WTR::InjectedBundlePage::didStartProvisionalLoadForFrame):
* WebKitTestRunner/InjectedBundle/TestRunner.cpp:
(WTR::TestRunner::TestRunner):
* WebKitTestRunner/InjectedBundle/TestRunner.h:
(TestRunner):
(WTR::TestRunner::setStopProvisionalFrameLoads):
(WTR::TestRunner::shouldStopProvisionalFrameLoads):

LayoutTests:

Unskip fast/loader/stop-provisional-loads.html now that WebKitTestRunner
implements testrunner.setStopProvisionalFrameLoads().

* platform/wk2/Skipped:

Canonical link: https://commits.webkit.org/114698@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128612 268f45cc-cd09-0410-ab3c-d52691b4dbfc